# event-api

./: .agent-id  .env.example  .gitignore  BAML_INTEGRATION_SYNTHESIS.md  CLAUDE.md  COOLIFY_DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile  INFRASTRUCTURE_REVIEW_REPORT.md  REVIEW_AUDIT_REPORT.md  REWORK-001_IMPLEMENTATION_REPORT.md  TASK.md  WORKFLOW_GUARDRAILS_IMPLEMENTATION.md  ci-cd-audit-report.md  docker-compose.coolify.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  environment-separation-guide.md  github-actions-recommendations.md  justfile  kanban.yaml  package-lock.json  package.json  spec.md  status.md  tsconfig.json
.agent/: status
config/: coolify-environment-guide.md  health-checks.cjs  nginx.conf  postgres-init-production.sql  simple-health-check.cjs
docs/: commands.md  coolify-deployment-guide.md  (+4 more)
services/baml-service/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/baml-service/src/: __init__.py  main.py
services/baml-service/src/api/: dependencies.py
services/baml-service/src/api/v1/: api.py
services/baml-service/src/api/v1/endpoints/: extraction.py  health.py
services/baml-service/src/core/: config.py  exceptions.py  logging.py
services/baml-service/src/schemas/: extraction.py
services/baml-service/src/services/: cache_service.py  extraction_service.py  openai_service.py  validation_service.py
services/baml-service/src/tests/: test_extraction.py  test_health.py
services/baml-service/src/utils/: html_parser.py
(+191 files in other folders)
