[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "baml-service"
version = "1.0.0"
description = "AI-powered HTML content extraction service for event data processing"
authors = [
    {name = "Event API Team"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "openai==1.3.7",
    "tenacity==8.2.3",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "bleach==6.1.0",
    "python-json-logger==2.0.7",
    "psutil==5.9.6",
    "slowapi==0.1.9",
    "redis==5.0.1",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy==1.7.1",
    "coverage==7.3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/tests",
]
asyncio_mode = "auto"